# fraud_transactions

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/: FraudShield_deck.pptx  README.md  api_reference.md  architecture_decisions.md  arquitectura_realtime (2).md  customer_journey.md  executive_summary.md  governance_explainability.md  kpis_financieros (1).md  methodology.md  model_evaluation.md  presentation_outline.md  ~$FraudShield_deck.pptx
fraud_api/: .dockerignore  Dockerfile  README.md  requirements.txt
fraud_api/src/: inference.py  main.py  schema.py  settings.py
fraud_api/tests/: _fixtures.json  conftest.py  test_api.py
fraud_ui/: README.md  api_client.py  app.py  data_loader.py  requirements.txt
notebooks/: 01_eda.ipynb
reports/: eda_report.md  evaluation_report.md  feature_importance.csv  features_report.md  segment_metrics.csv  shap_top10.csv  training_report.md
scripts/: batch_score.py
src/: config.py  evaluate.py  features.py  ingest.py  train.py
tests/: test_batch_score.py  test_bootstrap.py  test_evaluate.py  test_features.py  test_train.py
