[project]
name = "fraud-transactions"
version = "0.1.0"
description = "Fraud detection pipeline (XGBoost) for ShopNow capstone"
requires-python = ">=3.11,<3.12"
dependencies = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "duckdb>=0.10",
    "pyarrow>=15",
    "mlflow>=2.10",
    "optuna>=3.5",
    "shap>=0.44",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
